--- a/app/src/main/res/layout/bank_layout.xml
+++ b/app/src/main/res/layout/bank_layout.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_bank"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="@dimen/_52dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/light_blue">
 
@@ -279,7 +279,7 @@
             android:paddingStart="@dimen/_16dp"
             android:paddingEnd="@dimen/_8dp"
             app:layout_constraintTop_toBottomOf="@id/txt_account_number"
-            tools:ignore="Autofill,LabelFor,MissingConstraints"
+            tools:ignore="Autofill,LabelFor,MissingConstraints,TextFields"
             tools:layout_editor_absoluteX="16dp" />
 
         <TextView
