--- a/app/src/main/res/layout/farm_layout.xml
+++ b/app/src/main/res/layout/farm_layout.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_farm"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="@dimen/_52dp"
         android:background="@color/light_blue"
         android:layout_gravity="center_horizontal">
 
