--- a/app/src/main/res/layout/assests_layout.xml
+++ b/app/src/main/res/layout/assests_layout.xml
@@ -117,8 +117,10 @@
         <RelativeLayout
             android:id="@+id/assest_member_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
+            android:paddingStart="@dimen/_10dp"
+            android:paddingEnd="@dimen/_10dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
@@ -129,11 +131,11 @@
             <Spinner
                 android:id="@+id/edt_assets__member"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
@@ -166,8 +168,10 @@
         <RelativeLayout
             android:id="@+id/asset_type__relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
+            android:paddingEnd="@dimen/_10dp"
+            android:paddingStart="@dimen/_10dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
@@ -178,11 +182,11 @@
             <Spinner
                 android:id="@+id/edt_asset_type"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_8dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
@@ -241,8 +245,10 @@
         <RelativeLayout
             android:id="@+id/asset_status__relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
+            android:paddingStart="@dimen/_10dp"
+            android:paddingEnd="@dimen/_10dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
@@ -253,11 +259,12 @@
             <Spinner
                 android:id="@+id/edt_status_type"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
@@ -443,9 +450,8 @@
             android:drawableLeft="@drawable/upload_icon"
             android:gravity="center_vertical"
             android:inputType="none"
-            android:paddingStart="@dimen/_16dp"
-            android:paddingLeft="100dp"
-            android:paddingEnd="@dimen/_8dp"
+            android:paddingStart="@dimen/_100dp"
+            android:paddingEnd="@dimen/_50dp"
             android:text="@string/_upload_files"
             android:textAlignment="center"
             android:textColor="@color/black"
