--- a/app/src/main/res/layout/basic_profile_layout.xml
+++ b/app/src/main/res/layout/basic_profile_layout.xml
@@ -221,11 +221,13 @@
         <RelativeLayout
             android:id="@+id/gender_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_height="@dimen/_45dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
+            android:paddingLeft="@dimen/_10dp"
+            android:paddingTop="@dimen/_8dp"
+            android:paddingRight="@dimen/_10dp"
             app:layout_constraintTop_toBottomOf="@id/txt_gender"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp">
@@ -233,11 +235,11 @@
             <Spinner
                 android:id="@+id/edt_gender"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
@@ -409,12 +411,13 @@
         <RelativeLayout
             android:id="@+id/smartphone_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
-            android:paddingStart="@dimen/_16dp"
+            android:paddingStart="@dimen/_10dp"
+            android:paddingEnd="@dimen/_10dp"
             app:layout_constraintTop_toBottomOf="@id/txt_smartphone"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp">
@@ -422,11 +425,11 @@
             <Spinner
                 android:id="@+id/edt_smartphone"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
@@ -603,9 +606,8 @@
             android:drawableLeft="@drawable/upload_icon"
             android:gravity="center_vertical"
             android:inputType="none"
-            android:paddingStart="@dimen/_16dp"
-            android:paddingLeft="100dp"
-            android:paddingEnd="@dimen/_8dp"
+            android:paddingStart="@dimen/_100dp"
+            android:paddingEnd="@dimen/_50dp"
             android:text="@string/_upload_files"
             android:textAlignment="center"
             android:textColor="@color/black"
