--- a/app/src/main/res/layout/household_layout.xml
+++ b/app/src/main/res/layout/household_layout.xml
@@ -118,8 +118,10 @@
         <RelativeLayout
             android:id="@+id/household_member_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
+            android:paddingEnd="@dimen/_10dp"
+            android:paddingStart="@dimen/_10dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
@@ -130,11 +132,11 @@
             <Spinner
                 android:id="@+id/edt_household__member"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_8dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
