--- a/app/src/main/res/layout/livestock_layout.xml
+++ b/app/src/main/res/layout/livestock_layout.xml
@@ -119,11 +119,13 @@
         <RelativeLayout
             android:id="@+id/livestock_member_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
+            android:paddingEnd="@dimen/_10dp"
+            android:paddingStart="@dimen/_10dp"
             app:layout_constraintTop_toBottomOf="@id/txt_livestock_member"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp">
@@ -131,13 +133,13 @@
             <Spinner
                 android:id="@+id/edt_livestock__member"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
+                android:layout_marginStart="@dimen/_8dp"
                 android:spinnerMode="dropdown" />
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -194,23 +196,24 @@
         <RelativeLayout
             android:id="@+id/livestock_breed_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
+            android:paddingStart="@dimen/_10dp"
+            android:paddingEnd="@dimen/_10dp"
             app:layout_constraintTop_toBottomOf="@id/txt_livestock_breed"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp">
-
             <Spinner
                 android:id="@+id/edt_livestock__breed"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerVertical="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
+                android:layout_marginStart="@dimen/_8dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
@@ -242,23 +245,24 @@
         <RelativeLayout
             android:id="@+id/livestock_count_relative_layout"
             android:layout_width="@dimen/_300dp"
-            android:layout_height="@dimen/_50dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_marginTop="@dimen/_8dp"
+            android:paddingEnd="@dimen/_10dp"
+            android:paddingStart="@dimen/_10dp"
             android:background="@drawable/custom_edittext"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@id/txt_livestock_count"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="16dp">
-
             <Spinner
                 android:id="@+id/edt_livestock__count"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginBottom="@dimen/_minus15dp"
                 android:background="@android:color/transparent"
                 android:gravity="center_horizontal"
                 android:spinnerMode="dropdown" />
